Insert Copyright Fix copyright links contrast color reordering the powered by opecart text

--- a/catalog/view/theme/electronic/css/style.css
+++ b/catalog/view/theme/electronic/css/style.css
@@ -2342,6 +2342,10 @@ textarea.input {
   font-size: 12px;
 }
 
+.copyright a {
+  color: var(--primary);
+}
+
 .footer-payments li {
   display: inline-block;
   margin-right: 5px;
